master: working on login for admin
