# backend/models/Soundcloud.go
@@ -3,3 +3,8 @@ package models
 type SoundcloudUrl struct {
 	Url string `json:"url"`
 }
+
+type UserCredentials struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
